--- a/ureport/templates/ureport/home.html
+++ b/ureport/templates/ureport/home.html
@@ -1,6 +1,6 @@
 {% extends "ureport_layout.html" %}
-{% load cache %}
-
+{#{% load cache %}#}
+{% load i18n %}
 {% block javascripts %}
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script src="http://openlayers.org/api/2.11-rc1/OpenLayers.js?1123"></script>
@@ -18,10 +18,10 @@
     <div id="viz">
     </div>
     <div class="scrolltop">
-        <span>PREVIOUS POLLS</span>
+        <span>{% trans "PREVIOUS POLLS" %}</span>
     </div>
     <a name="poll_results"></a>
-    {% cache 1800 poll_list %}
+{#    {% cache 1800 poll_list %}#}
         {% block poll_list %}
             <div class="poll_list">
                 <ul id="list_of_polls">
@@ -38,7 +38,7 @@
                 </ul>
             </div>
         {% endblock %}
-    {% endcache %}
+{#    {% endcache %}#}
     <div class="scrollbottom">
         &nbsp;
     </div>
