--- a/ureport/templates/ureport/partials/viz/top_responses.html
+++ b/ureport/templates/ureport/partials/viz/top_responses.html
@@ -1,5 +1,5 @@
-
-<h3 class="about_header">Top Responses <img class="ab_img" src="{{ MEDIA_URL }}ureport/images/shout_out.png"/></h3>
+{% load i18n %}
+<h3 class="about_header">{% trans "Top Responses" %} <img class="ab_img" src="{{ MEDIA_URL }}ureport/images/shout_out.png"/></h3>
 <div style="display: block;line-height: 15px;position: relative;">
 
 
