--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -63,10 +63,7 @@
 
             <div class="intro">
                 <p>
-                    {% blocktrans %}
-                        Ureport is a free SMS-based system that allows young Ugandans to speak out on what's happening
-                    in communities across the country, and work together with other community leaders for positive change.
-                    {% endblocktrans %}
+		    {% blocktrans %}Ureport is a free SMS-based system that allows young Ugandans to speak out on what's happening in communities across the country, and work together with other community leaders for positive change.{% endblocktrans %}
                 </p>
             </div>
             <div class="join">
@@ -95,7 +92,7 @@
 
 	    <div class="footer">
 	       <div class="sponsors">
-	           Supported by:
+	       {% trans "Supported by" %}:
 	           <img src="{{ MEDIA_URL }}ureport/images/unicef_logo.png"/>
 	           <img src="{{ MEDIA_URL }}ureport/images/brac_logo.png"/>
 	           <img src="{{ MEDIA_URL }}ureport/images/scouts_logo.png"/>
