--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+{% load i18n %}
 <html lang="en">
 <head>
-    <title>Ureport - {% block page_title %}Voice Matters{% endblock %}</title>
+    <title>Ureport - {% block page_title %}{% trans "Voice Matters" %}{% endblock %}</title>
 
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}ureport/stylesheets/base.css">
  
@@ -40,26 +41,26 @@
         <div class="banner">
             <a href="/">
             <span class="brand">UReport</span>
-            <span class="tagline">VOICE MATTERS</span>
+	    <span class="tagline">{% trans "VOICE MATTERS" %}</span>
             </a>
             {% load humanize %}
-            <span id="span_info"><span id="span_total">{{ total_ureporters|intcomma }}</span> members to date</span>
+	    <span id="span_info"><span id="span_total">{{ total_ureporters|intcomma }}</span> {% trans "members to date" %}</span>
         </div>
         <div class="content">
         <div class="subnav">
 
           <ul class="nav nav-pills">
-           <li class="first"><a href="/">HOME</a></li>
+	   <li class="first"><a href="/">{% trans "HOME" %}</a></li>
 	                {% if user.is_authenticated %}
-	                   <li><a href="{% url ureport-polls user.pk %}">POLL ADMIN</a></li>
-	                   <li><a href="{% url messagelog %}">MESSAGE LOG</a></li>
-	                   <li><a href="{% url ureport-contact %}">UREPORTERS</a></li>
-	                   <li><a href="{% url flaggedmessages %}">FLAGGED MESSAGES</a></li>
-                         <li><a href="{% url mp_dashboard %}">MP BARAZA</a></li>
-                        <li><a href="{% url classifier %}">A-CLASS</a></li>
-                        <li><a href="{% url alerts user.pk %}">Real Time</a></li>
+			   <li><a href="{% url ureport-polls user.pk %}">{% trans "POLL ADMIN" %}</a></li>
+			   <li><a href="{% url messagelog %}">{% trans "MESSAGE LOG" %}</a></li>
+			   <li><a href="{% url ureport-contact %}">{% trans "UREPORTERS" %}</a></li>
+			   <li><a href="{% url flaggedmessages %}">{% trans "FLAGGED MESSAGES" %}</a></li>
+			 <li><a href="{% url mp_dashboard %}">{% trans "MP BARAZA" %}</a></li>
+			<li><a href="{% url classifier %}">{% trans "A-CLASS" %}</a></li>
+			<li><a href="{% url alerts user.pk %}">{% trans "Real Time" %}</a></li>
 	                {% else %}
-	                   <li><a href="/accounts/login">LOGIN</a></li>
+			   <li><a href="/accounts/login">{% trans "LOGIN" %}</a></li>
 	                {% endif %}
           </ul>
         </div>
@@ -71,7 +72,7 @@
 
 	    <div class="footer">
 	       <div class="sponsors">
-	           Supported by:
+	       {% trans "Supported by" %}:
 	           <img src="{{ MEDIA_URL }}ureport/images/unicef_logo.png"/>
 	           <img src="{{ MEDIA_URL }}ureport/images/brac_logo.png"/>
 	           <img src="{{ MEDIA_URL }}ureport/images/scouts_logo.png"/>
@@ -82,27 +83,27 @@
 	       <div class="footerlinks">
 	           <div class="nav-bottom">
                 <ul>
-	                <li class="first"><a href="/">HOME</a></li>
-	                <li><a href="/#poll_results">POLL RESULTS</a></li>
-	                <li><a href="about_ureport">ABOUT UREPORT</a></li>
-	                <li><a href="/join/">HOW TO JOIN</a></li>
+			<li class="first"><a href="/">{% trans "HOME" %}</a></li>
+			<li><a href="/#poll_results">{% trans "POLL RESULTS" %}</a></li>
+			<li><a href="about_ureport">{% trans "ABOUT UREPORT" %}</a></li>
+			<li><a href="/join/">{% trans "HOW TO JOIN" %}</a></li>
 	                <!-- <li><a href="#">SITE MAP</a></li>
 	                <li><a href="#">CONTACT US</a></li> -->
 	                {% if user.is_authenticated %}
-	                   <li><a href="{% url ureport-polls  user.pk %}">POLL ADMIN</a></li>
-	                   <li><a href="{% url messagelog %}">MESSAGE LOG</a></li>
-	                   <li><a href="{% url ureport-contact %}">UREPORTERS</a></li>
-	                   <li><a href="{% url flaggedmessages %}">FLAGGED MESSAGES</a></li>
-                        <li><a href="{% url mp_dashboard %}">MP BARAZA</a></li>
-                         <li><a href="{% url classifier %}">A-CLASS</a></li>
-                    <li><a href="{% url alerts user.pk %}">REAL TIME</a></li>
+			   <li><a href="{% url ureport-polls  user.pk %}">{% trans "POLL ADMIN" %}</a></li>
+			   <li><a href="{% url messagelog %}">{% trans "MESSAGE LOG" %}</a></li>
+			   <li><a href="{% url ureport-contact %}">{% trans "UREPORTERS" %}</a></li>
+			   <li><a href="{% url flaggedmessages %}">{% trans "FLAGGED MESSAGES" %}</a></li>
+			<li><a href="{% url mp_dashboard %}">{% trans "MP BARAZA" %}</a></li>
+			 <li><a href="{% url classifier %}">{% trans "A-CLASS" %}</a></li>
+		    <li><a href="{% url alerts user.pk %}">{% trans "REAL TIME" %}</a></li>
 	                {% else %}
-	                   <li><a href="/accounts/login">LOGIN</a></li>
+			   <li><a href="/accounts/login">{% trans "LOGIN" %}</a></li>
 	                {% endif %}
                 </ul>
 	           </div>
-	           <p>Copyright &copy; 2010 - 2012 UNICEF et al.</p>
-	           <p>RapidSMS and Ureport are available under the BSD license.</p>
+		   <p>{% trans "Copyright &copy; 2010 - 2012 UNICEF et al" %}.</p>
+		   <p>{% trans "RapidSMS and Ureport are available under the BSD license" %}.</p>
 	        </div>
 	    </div>
 
