--- a/ureport/templates/ureport/about.html
+++ b/ureport/templates/ureport/about.html
@@ -1,17 +1,17 @@
 {% extends "ureport_layout.html" %}
 {% block page_title %} About Ureport {% endblock %}
-
+{% load i18n %}
 {% block sidecontent %}
     <div class="why-join">
         <div class="why-placeholder">
-            <span>Why Join Ureport</span>
+	    <span>{% trans "Why Join Ureport" %}</span>
         </div>
 
         <ul>
-            <li><span class="blacktext">Speak out on what's happening in your community</span></li>
-            <li><span class="blacktext">Use Ureport results and information to update and increase citizen's awareness</span></li>
-            <li><span class="blacktext">Participate in nationwide campaigns to help improve your country</span> </li>
-            <li><span class="blacktext">Share what's happening around Uganda with other Ureporters</span></li>
+	    <li><span class="blacktext">{% trans "Speak out on what's happening in your community" %}</span></li>
+	    <li><span class="blacktext">{% trans "Use Ureport results and information to update and increase citizen's awareness" %}</span></li>
+	    <li><span class="blacktext">{% trans "Participate in nationwide campaigns to help improve your country" %}</span> </li>
+	    <li><span class="blacktext">{% trans "Share what's happening around Uganda with other Ureporters" %}</span></li>
         </ul>
     </div>
 {% endblock %}
@@ -19,14 +19,14 @@
 {% block content %}
 
     <div class="about">
-        <h3 class="about_header">About Ureport <img class="ab_img" src="{{ MEDIA_URL }}ureport/images/shout_out.png"/></h3>
+	<h3 class="about_header">{% trans "About Ureport" %} <img class="ab_img" src="{{ MEDIA_URL }}ureport/images/shout_out.png"/></h3>
 
         <div class="page">
             <p>
-                Ureport is a free SMS-based system that allows
+		{% blocktrans %}Ureport is a free SMS-based system that allows
                 young Ugandans to speak out on what's happening in
                 communities across the country, and work together
-                with other community leaders for positive change.
+		with other community leaders for positive change.{% endblocktrans %}
             </p>
 
             <div class="pointers">
@@ -34,31 +34,31 @@
                 <ul class="about_quoted">
                     <span class="about_subtitle">Ureport is made up of:</span>
                     <li>
-                        Weekly SMS messages and polls to and from
-                        a growing community of Ureporters
+			{% blocktrans %}Weekly SMS messages and polls to and from
+			a growing community of Ureporters{% endblocktrans %}
                     </li>
                     <li>
-                        Regular radio programs that will broadcast
-                        stories gathered by Ureport
+			{% blocktrans %}Regular radio programs that will broadcast
+			stories gathered by Ureport{% endblocktrans %}
                     </li>
                     <li>
-                        Newspaper articles that will publish stories from
-                        the Ureport community.
+			{% blocktrans %}Newspaper articles that will publish stories from
+			the Ureport community.{% endblocktrans %}
                     </li>
                 </ul>
             </div>
             <div class="mission">
-                <span class="about_subtitle">The mission of Ureport</span>
+		<span class="about_subtitle">{% trans "The mission of Ureport" %}</span>
 
                 <p>
-                    Inspire action within our communities to unite
+		    {% blocktrans %}Inspire action within our communities to unite
                     and share the responsibility of creating a better
                     environment for eveyone.<br/>
                     Inspire action from our leaders - let them know
                     what's going on and what action your community wants.<br/>
                     Share info that Ureport gathers through different
                     mediums (radio, TV, community dialogue, website,
-                    and youth events)
+		    and youth events){% endblocktrans %}
                 </p>
             </div>
 
