--- a/ureport/templates/ureport/home.html
+++ b/ureport/templates/ureport/home.html
@@ -1,6 +1,6 @@
 {% extends "ureport_layout.html" %}
 {% load cache %}
-
+{% load i18n %}
 {% block javascripts %}
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script src="http://openlayers.org/api/2.11-rc1/OpenLayers.js?1123"></script>
@@ -18,7 +18,7 @@
     <div id="viz">
     </div>
     <div class="scrolltop">
-        <span>PREVIOUS POLLS</span>
+	<span>{% trans "PREVIOUS POLLS" %}</span>
     </div>
     <a name="poll_results"></a>
         {% block poll_list %}
@@ -30,7 +30,7 @@
                                 <span class="poll-date">{{ p.start_date|date:"d/M/Y" }}</span> :
                                 {{ p.question }}
                                 <a href="javascript:void(0)"
-                                   onclick="clear_layers();$('#viz').load('{% url ureport.views.best_visualization p.pk %}')">See results</a>
+				   onclick="clear_layers();$('#viz').load('{% url ureport.views.best_visualization p.pk %}')">{% trans "See results" %}</a>
                             </li>
                         {%endif%}
                     {% endfor %}
