[Felix,MJ] updated the translation keys in the about page template

--- a/ureport/templates/ureport/about.html
+++ b/ureport/templates/ureport/about.html
@@ -32,7 +32,7 @@
             <div class="pointers">
 
                 <ul class="about_quoted">
-                    <span class="about_subtitle">Ureport is made up of:</span>
+                    <span class="about_subtitle">{% trans "Ureport is made up of" %}:</span>
                     <li>
 			{% blocktrans %}Weekly SMS messages and polls to and from
 			a growing community of Ureporters{% endblocktrans %}
