--- a/ureport/templates/ureport/about.html
+++ b/ureport/templates/ureport/about.html
@@ -7,12 +7,14 @@
 	    <span>{% trans "Why Join Ureport" %}</span>
         </div>
 
-        <ul>
-	    <li><span class="blacktext">{% trans "Speak out on what's happening in your community" %}</span></li>
-	    <li><span class="blacktext">{% trans "Use Ureport results and information to update and increase citizen's awareness" %}</span></li>
-	    <li><span class="blacktext">{% trans "Participate in nationwide campaigns to help improve your country" %}</span> </li>
-	    <li><span class="blacktext">{% trans "Share what's happening around Uganda with other Ureporters" %}</span></li>
-        </ul>
+	<div class="blacktext">
+       {% blocktrans %}<ul>
+	    <li>Speak out on what's happening in your community</li>
+	    <li>Use Ureport results and information to update and increase citizen's awareness</li>
+	    <li>Participate in nationwide campaigns to help improve your country</li>
+	    <li>Share what's happening around Uganda with other Ureporters</li>
+	</ul>{% endblocktrans %}
+	</div>
     </div>
 {% endblock %}
 
