poll results page showing openlayer in maps

--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -51,7 +51,7 @@
             <div class="nav-side">
                 <ul>
                 <li><a href="/">{% trans "HOME" %}</a></li>
-                <li><a href="/#poll_results">{% trans "POLL RESULTS" %}</a></li>
+                <li><a href="/pollresults">{% trans "POLL RESULTS" %}</a></li>
                 <li><a href="/about_ureport/">{% trans "ABOUT UREPORT" %}</a></li>
                 <li><a href="/join/">{% trans "HOW TO JOIN" %}</a></li>
                 <li><a href="{% url pulse %}">{% trans "NATIONAL PULSE" %}</a> </li>
