--- a/ureport/templates/ureport/two-column.html
+++ b/ureport/templates/ureport/two-column.html
@@ -8,6 +8,7 @@
 {% block javascripts %}
     {{ block.super }}
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <script src="http://openlayers.org/api/2.11-rc1/OpenLayers.js?1123"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}generic/javascripts/map.js"></script>
     <script src="{{MEDIA_URL}}ureport/javascripts/ureport.js" type="text/javascript"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/jquery-ui.js"></script>
